# ShardKV

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Citations.md  LICENSE  README.md  hash_table_main.cc  main  rebuild.sh  rebuild_hashtable.sh  rebuild_run.sh  rebuild_test.sh
.zed/: tasks.json
src/: main.cc  main.cpp
src/CLI/: command_line_interface.cpp  command_line_interface.h
src/CLI/InputParser/: input_parser.cpp  input_parser.h
src/Core/: core.cpp  core.h
src/HashTable/: hash_table.cpp  hash_table.h
src/Types/: command.h  node.h  observer.h  restAPI.h  rest_API.h  result.h  status.h
src/client/CLI/: command_line_interface.cc  command_line_interface.h
src/client/CLI/InputParser/: input_parser.h
src/server/Core/: core.cc  core.h
src/server/HashTable/: hash_table.cc  hash_table.cpp  hash_table.h  research.md
src/server/HashTable/Types/: group.h  slot.h
src/server/HashTable/research/: hash_slot.md  redis.md  stl_research.md  swiss_table.md
src/server/Utility/: utilities.h
tests/CLI/: test_input_parser.cc  test_input_parser.cpp
tests/HashTable/: test_hash_table.cc  test_hash_table.cpp
tests/Networking/: cliToWebserver.cc  serverToWebserver.cc  webserverToCli.cc  webserverToServer.cc
